# surgical_console_ITB

./: README.md
Surgical_Console_arduino/UI_v1/: UI_v1.ino  changelog.txt
Surgical_Console_arduino/armController_v1.1/: armController_v1.1.ino
data_handler/: CMakeLists.txt  package.xml  setup.py
data_handler/include/data_handler/: signal_condition.h
data_handler/launch/: data_handler.launch
data_handler/msg/: Profile.msg  ui_msgs.msg
data_handler/src/: data_logger.cpp  data_taker_l.cpp  data_taker_r.cpp  profile_handler_node.py  sig_Cond_test.cpp  signal_condition_L.cpp  signal_condition_R.cpp  test_load.py  test_node.py
launcher/: CMakeLists.txt  package.xml
launcher/launch/: csLauncher (bu).launch  csLauncher.launch
save_data/: LCD.fla  data_masuk_pos_1.txt  data_masuk_pos_1_l.txt  data_masuk_pos_2.txt  data_masuk_pos_2_r.txt  gripper.fla  l_gripper_dat.fla  profiles.fla  r_gripper_dat.fla
sensor_handler/: CMakeLists.txt  package.xml  setup.py
sensor_handler/include/sensor_handler/: forwardKinematic.h
sensor_handler/launch/: sensor.launch
sensor_handler/msg/: Float64ArrayLength7.msg  gripperLimit.msg  sensorData.msg  sensorInstruction.msg
sensor_handler/src/: calibrate_encoder.cpp  calibrationTest.cpp  enc_bit_converter.cpp  enc_calibrator_node.cpp  fk_node_l.cpp  fk_node_r.cpp  grip_load_test.py  grip_save_test.py  gripper_calibrator_l.py  gripper_calibrator_r.py  gripper_saver.py  kinematic_node.cpp.bak  sensor_node.cpp  sensor_node_bu.cpp  sensor_node_l.cpp  sensor_node_l.cpp.bak  sensor_node_r.cpp  sensor_node_r.cpp.bak  test_gripper_handler.py
sensor_handler/src/sensor_handler/: forwardKinematic.cpp
socket_handler/: CMakeLists.txt  package.xml
socket_handler/launch/: socket.launch  testing.launch
socket_handler/src/: client_L.py  client_R.py  generator_L.py  generator_R.py  latency.py
